--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: 0.8.1
   flutter_spinkit: ^4.1.2
+  flutter_staggered_grid_view: "^0.3.2"
 
 dev_dependencies:
   flutter_test:
