--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_auth: 0.8.1
+  firebase_auth: ^0.18.1+2
   flutter_spinkit: ^4.1.2
+  firebase_core: 0.5.0+1
+  cloud_firestore: ^0.14.1+3
 
 dev_dependencies:
   flutter_test:
@@ -60,12 +62,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Circular
+      fonts:
+        - asset: assets/fonts/VarelaRound-Regular.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
