--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   firebase_core: 0.5.0+1
   cloud_firestore: ^0.14.1+3
+  flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
   flutter_test:
