--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: 0.5.0+1
   cloud_firestore: ^0.14.1+3
   flutter_staggered_grid_view: ^0.3.2
+  google_sign_in: ^4.5.4
 
 dev_dependencies:
   flutter_test:
