--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.14.1+3
   flutter_staggered_grid_view: ^0.3.2
   google_sign_in: ^4.5.4
+  firebase_storage: ^4.0.1
 
 dev_dependencies:
   flutter_test:
