--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   google_sign_in: ^4.5.4
   firebase_storage: ^4.0.1
+  image_picker: ^0.6.7+12
+  image_crop: ^0.3.4
 
 dev_dependencies:
   flutter_test:
