--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,7 +31,7 @@ dependencies:
   google_sign_in: ^4.5.4
   firebase_storage: ^4.0.1
   image_picker: ^0.6.7+12
-  image_crop: ^0.3.4
+  image_cropper: ^1.3.1
 
 dev_dependencies:
   flutter_test:
