--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_storage: ^4.0.1
   image_picker: ^0.6.7+12
   image_cropper: ^1.3.1
+  flutter_phoenix: ^0.1.0
 
 dev_dependencies:
   flutter_test:
