--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.6.7+12
   image_cropper: ^1.3.1
   flutter_phoenix: ^0.1.0
+  firebase_image: ^0.2.0
 
 dev_dependencies:
   flutter_test:
