--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_cropper: ^1.3.1
   flutter_phoenix: ^0.1.0
   firebase_image: ^0.2.0
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
