--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_phoenix: ^0.1.0
   firebase_image: ^0.2.0
   fluttertoast: ^7.1.1
+  photo_view: ^0.10.2
 
 dev_dependencies:
   flutter_test:
