--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  mapbox_gl: ^0.9.0
+  flutter_map: ^0.10.1+1
   cupertino_icons: ^0.1.2
+  geolocator: ^5.3.1
   firebase_auth: ^0.18.1+2
   flutter_spinkit: ^4.1.2
   firebase_core: 0.5.0+1
